# gLLM

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
benchmarks/: backend_request_func.py  benchmark_prefix_serving.py  benchmark_serving.py  benchmark_throughput.py  evaluate_MMLU_pro.py  evaluate_bfcl.py  evaluate_mmlu_pro.py  evaluate_mmmu.py  evaluate_ruler.py
csrc/: cache_kernels.cu  ops.h  torch_bindings.cpp
csrc/moe/: topk_softmax_kernels.cu
docs/: deepseek_sparse_attention_design.md  dp_attention_design.md  encoder_disaggregation_usage.md  logprobs_design.md
evaluations/: evaluate_MMLU_pro.py
examples/: batch_inference.py  chat.py  chat_client.py  client.py  mm_chat.py
gllm/: __init__.py  _custom_ops.py  allocatorID.py  async_llm_engine.py  async_utils.py  async_worker.py  comm.py  dist_schedule.py  dist_utils.py  encoder_engine.py  frontend_scheduler.py  id_allocator.py  input_data.py  llama3.py  llm_engine.py  memory_manager.py  mm_common.py  model_loader.py  model_runner.py  overlap_worker.py  pp_scheduler.py  profiler_mixin.py  sampler.py  scheduler.py  sequence.py  utils.py  worker.py  worker_scheduler.py  zmq_comm.py
gllm/disagg/: __init__.py  config.py  discovery.py  encoder_runtime.py  handshake.py  lm_manager.py  protocol.py
gllm/distributed/: __init__.py  cuda_wrapper.py  custom_all_reduce.py
gllm/entrypoints/: api_server.py  discovery_server.py  encoder_server.py  lm_server.py  protocol.py  serving_chat.py  serving_completions.py  tool_parsers.py
gllm/layers/: activation.py  attention.py  conv.py  layernorm.py  linear.py  repetition_penalty.py  rotary_embedding.py  sampler.py  vocab_parallel_embedding.py
gllm/layers/moe/: __init__.py  moe_align_block_size.py  topk.py
gllm/layers/moe/fused_moe_triton/: __init__.py  fused_moe.py  layer.py
gllm/layers/ops/: batched_rotary_kernel.py  cache_kernels.py  merge_attn_states.py  qk_norm.py  triton_decode_attention.py
gllm/layers/ops/fla/: __init__.py  _sgl_compat.py  chunk.py  chunk_delta_h.py  chunk_fwd.py  chunk_intra.py  chunk_intra_token_parallel.py  chunk_o.py  chunk_scaled_dot_kkt.py  cumsum.py  fused_norm_gate.py  fused_recurrent.py  index.py  kda.py  l2norm.py  layernorm_gated.py  op.py  solve_tril.py  utils.py  wy_fast.py
gllm/layers/ops/mamba/: __init__.py  causal_conv1d_triton.py
gllm/layers/quantization/: fp8.py
gllm/models/: chatglm.py  deepseek_v2.py  deepseek_v32.py  kimi_k25.py  kimi_k25_vision.py  llama.py  mixtral.py  qwen2.py  qwen2_5_vl.py  qwen2_moe.py  qwen3.py  qwen3_5.py  qwen3_5_moe.py  qwen3_moe.py  qwen3_vl.py  qwen3_vl_moe.py  utils.py  weight_loader.py  weight_utils.py
gllm/modules/: attention.py
gllm/tokenizers/: __init__.py  deepseek_v32.py  tool_parsers.py
gllm/transfer/: __init__.py  nixl_transfer.py
gllm/utils/: __init__.py
